@@ -1,5 +1,10 @@
 	2011-07-15 (T.S.):
 
+	* configure.ac, config.c: added configure option to enable unified
+	work area.
+
+	2011-07-15 (T.S.):
+
 	* cexp-txtregion.c: declare BSP_sbrk_policy as uintptr_t.
 
 	2011-07-15 (T.S.):
